# talestogo

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  API_KEYS_SETUP.md  AUTHENTICATION_SYSTEM_OVERVIEW.md  AUTO_ANALYSIS_IMPLEMENTATION.md  AWS_MIGRATION.md  CHART_CAPTURE_IMPLEMENTATION.md  CLAUDE.md  COLLECTION_BATCHES.md  CREATE_OAUTH_CREDENTIALS.md  CREDENTIALS_VISUAL_GUIDE.md  Complete_Methodology_Document.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_STRATEGY.md  Dockerfile  ENV_SETUP_GUIDE.md  GOOGLE_OAUTH_SETUP.md  HOW_TALES_WORKS_DOWNLOAD_FEATURE.md  HOW_TALES_WORKS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Internal_Developer_Guide_With_Additions.docx  LICENSE  LOGIN_SYSTEM_FILE_INDEX.md  LOGIN_SYSTEM_INVESTIGATION.md  LOGIN_SYSTEM_QUICK_REFERENCE.md  METRICS_ARCHITECTURE_SUMMARY.md  METRICS_DOCUMENTATION_INDEX.md  MIGRATION_GUIDE.md  MOBILE_RESPONSIVE_GUIDE.md  MULTIUSER_AUTH_STATUS.md  Methodology_Additions.md  Methodology_Additions.txt  OAUTH_CONSENT_SCREEN_GUIDE.md  OAUTH_VISUAL_GUIDE.md  OPTIMIZATION_SUMMARY.md  PORTAINER_ENV_VARS.txt  POSTGRESQL_MIGRATION_GUIDE.md  (+112 more)
.claude/: settings.local.json  settings.local.json.backup
.claude/plans/: discovery-findings.md  nstxview-rag-implementation.md  outlier-detection-cleanup.md  outlier-detection-implementation-plan.md  tales-nstxview-separation.md
.github/workflows/: dast.yml
airo-env/: pyvenv.cfg
airo_project.egg-info/: SOURCES.txt  top_level.txt
app/: ai_generator.py  analytics.py  auth.py  config.py  crud.py  crud_factory.py  database.py  dependencies.py  email.py  main.py  models.py  scheduler.py  schemas.py  seed_db.py  test_user_isolation.py
app/migrations/: 000_add_invitation_columns.sql  001_cleanup_orphaned_data.sql  002_add_not_null_constraints.sql  003_import_robotrachel_data.sql  README.md  run_migrations.py
app/routers/: admin.py  analytics.py  auth.py  batches.py  bigidea.py  brands.py  canon.py  competitors.py  competitors.py.backup  competitors_new.py  descriptors.py  heads.py  help.py  llm_providers.py  migration_helper.py  nstxview.py  operations.py  outliers.py  personas.py  personas.py.backup  queries.py  reports.py  responses.py  scheduled_tasks.py  site.py  tasks.py  tenants.py  thresholds.py  users.py
app/services/: analytics_cache.py  batch_analytics.py  cached_metrics.py  chart_generator.py  data_pipeline.py  email_notifications.py  generic_llm_client.py  llm_provider_manager.py  llm_service.py  metrics.py  perplexity_service.py  persona_generator.py  pptx_generator.py  redis_cache.py  report_export.py  (+3 more)
brandkit/: brandkit.txt
celery_app/: celery.py  celery.sqlite3  tasks.py
deployment-kit/: .env.template  IT_DEPLOYMENT_GUIDE.docx  IT_DEPLOYMENT_GUIDE.md  IT_DEPLOYMENT_GUIDE.txt  README.md  USER_GUIDE.docx  USER_GUIDE.md  docker-compose.yml  setup.sh
deployment-kit-pppl/: .env.template  IT_DEPLOYMENT_GUIDE.md  README.md  USER_GUIDE.docx  USER_GUIDE.md  docker-compose.yml  import_data.sh  setup.sh
docs/: AZURE_FOUNDRY_MIGRATION_PLAN.md  ENV_VARS_REFERENCE.docx  ENV_VARS_REFERENCE.md  IT_DEPLOYMENT_GUIDE.md  NSTXVIEW_RAG_EVALUATION_PLAN.md  NSTXVIEW_SETUP.md  OPTIMIZATION_IMPACT.md  PERFORMANCE_OPTIMIZATIONS.md  PPPL_DATA_MIGRATION_PLAN.md  USER_GUIDE.md
frontend/: TESTING.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
images/: Favicon.psd  RobotRachel3-Black-on-Transparent-Background copy.psd  RobotRachelBB-Black-on-Transparent-Background copy.psd  RobotRachelBB-Icon-Black-on-Transparent-Background copy 2.psd  RobotRachelBB-Icon-White-on-Transparent-Background copy.psd
migrations/: activate_all_users.py  add_admin_audit_logs.py  add_allowed_products.py  add_brand_in_query_field.py  add_brand_shares.py  add_collection_batches.py  add_collection_frequency.py  add_composite_indexes.py  add_heads_tables.py  add_llm_provider_api_version.py  add_llm_provider_bing_connection_name.py  add_llm_providers.py  add_nstxview_conversations.py  add_nstxview_tables.py  add_report_type_field.py  add_scheduling_tables.sql  add_solstice_tenant.py  add_task_process_id.py  add_tenant_column.py  add_tenant_support.py  add_tenant_to_all_tables.py  assign_existing_users_to_tenant.py  create_tenant.py  remove_descriptor_category.py  reset_sequences.py  rollback_pending_shares.py  rollback_pending_shares.sql  rollback_scheduling_tables.sql  run_all_migrations.py  run_rollback_on_railway.py  simplify_api_keys.py
nstxview-mcp/: CLAUDE.md  README.md  pyproject.toml  server.py
scripts/: README.md  apply_performance_optimizations.sh  backfill_batch_analytics.py  clean_competitor_names.py  docker-entrypoint.sh  export_brand_data.py  fix_allowed_products_format.py  generate_fake_trend_data.py  investigate_december_data.py  make_jack_data_reviewer.py  outlier_detection.py  process_nstxview_papers.py  run_nstxview_processing.sh  update_batch_date.py
tales_project.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_ai_generator.py  test_api.py  test_celery_tasks.py  test_crud.py  test_generic_llm_client.py  test_llm_provider_manager.py  test_llm_providers_router.py  test_responses_router.py  test_tasks.py
(+206 files in other folders)
