[project]
name = "tales_project"
version = "0.1.0"

# Optional dependencies — install with: pip install .[<extra>]
# These are NOT installed by `pip install -r requirements.txt`. They light up
# additional providers in Admin → LLM Providers; the rest of the app runs
# fine without them.
[project.optional-dependencies]
# Azure AI Foundry "Grounding with Bing Search" — adds the bing_grounded
# api_type so an Azure-only deployment can populate the State of the LLMs
# report section without bringing in Gemini or Perplexity.
#
# Install: pip install .[bing-grounded]
#
# The exact SDK surface for grounding-with-bing is evolving; pin to a
# minimum version and adjust based on operator feedback. Without this
# extra, attempting to configure a bing_grounded provider returns a
# clear "install the bing-grounded extra" error rather than ImportError.
bing-grounded = [
    "azure-ai-projects>=1.0.0b1",
    "azure-ai-agents>=1.0.0b1",
    "azure-identity>=1.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

# Bandit (Python SAST) configuration.
#
# Excludes one-shot ops scripts that are not part of the deployed application:
# - scripts/admin/sync_prod_to_localhost.py builds dynamic SQL by inspecting
#   the schema and is only run manually by the maintainer to copy prod data
#   to a localhost dev DB. Its B608 SQL-injection findings are false positives
#   (table/column identifiers come from SQLAlchemy schema inspection, not user
#   input) and would otherwise drown out legitimate signal from app/.
# - scripts/migrations/ contains one-shot historical migration scripts that
#   aren't re-run.
# Both directories are excluded from the deployment surface area.
[tool.bandit]
exclude_dirs = ["scripts/admin", "scripts/migrations"]