[project]
name = "tales_project"
version = "0.1.0"

# Optional dependencies — install with: pip install .[<extra>]
# These are NOT installed by `pip install -r requirements.txt`. They light up
# additional providers in Admin → LLM Providers; the rest of the app runs
# fine without them.
[project.optional-dependencies]
# Azure AI Foundry Agents — adds the azure_foundry_agents api_type so an
# Azure-only deployment can populate the State of the LLMs report section
# without bringing in Gemini or Perplexity. Uses Foundry Prompt Agents
# invoked via the OpenAI Responses API with Grounding-with-Bing-Search.
#
# Install: pip install .[azure-foundry]
azure-foundry = [
    "azure-ai-projects>=2.2.0",
    "azure-identity>=1.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

# Bandit (Python SAST) configuration.
#
# Excludes one-shot ops scripts that are not part of the deployed application:
# - scripts/admin/sync_prod_to_localhost.py builds dynamic SQL by inspecting
#   the schema and is only run manually by the maintainer to copy prod data
#   to a localhost dev DB. Its B608 SQL-injection findings are false positives
#   (table/column identifiers come from SQLAlchemy schema inspection, not user
#   input) and would otherwise drown out legitimate signal from app/.
# - scripts/migrations/ contains one-shot historical migration scripts that
#   aren't re-run.
# Both directories are excluded from the deployment surface area.
[tool.bandit]
exclude_dirs = ["scripts/admin", "scripts/migrations"]