[project]
name = "nstxview-mcp"
version = "0.1.0"
description = "MCP server for NSTX/NSTX-U plasma physics research data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "plasma physics", "nstx", "fusion", "research"]
authors = [
    { name = "Rachel Kremen" }
]

dependencies = [
    "fastmcp>=0.1.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
nstxview-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
